<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:key="@string/pref_temperature_units_key"
        android:title="@string/pref_temperature_units_label"
        android:defaultValue="@string/pref_temperature_unit_default"
        android:dialogTitle="@string/pref_temperature_units_label"
        android:entries="@array/pref_temperature_units"
        android:entryValues="@array/pref_temperature_units"/>

    <CheckBoxPreference
        android:key="@string/pref_notification_key"
        android:title="@string/pref_notification_label"
        android:defaultValue="@string/pref_enable_notifications_default"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:summaryOff="@string/pref_enable_notifications_false"/>

</PreferenceScreen>